tests/valid_make_int/bug506_helper_1.m
%---------------------------------------------------------------------------%
% vim: ft=mercury ts=4 sw=4 et
%---------------------------------------------------------------------------%

:- module bug506_helper_1.
:- interface.

:- type (rule)
    --->    rule(int).
